--- a/src/assets/scss/front/_index.scss
+++ b/src/assets/scss/front/_index.scss
@@ -29,7 +29,7 @@
       color: $white;
       padding: 30px 120px;
       position:relative;
-      top: -80px;
+      top: -30px;
     }
     h2 {
       font-weight: 800;
@@ -56,8 +56,10 @@
   }
   @include max-991 {
     .kv {
-      justify-content: center;
+      
+      justify-content: start;
       .txt-wrap {
+        width: 50%;
         padding: 15px 30px;
       }
     }
